<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/demarage"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ViewContact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="100dp"
            android:text="@string/VIEW" />

        <Button
            android:id="@+id/AddContact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/ADD"
            android:layout_marginTop="30dp"
             />

        <Button
            android:id="@+id/ExitTrombi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Exit"
            android:layout_marginTop="30dp" 
        >
        </Button>



</LinearLayout>

