<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/demarage"> >
    
	
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/inconnu" />
    
     <Button
        android:id="@+id/Take"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20sp" >

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.31"
            android:paddingBottom="10dip"
            android:text="@string/name"
            android:textColor="#3300CC"
            android:textSize="30dp" />

    </LinearLayout>
    
	    <EditText
	        android:id="@+id/NomEleve"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:ems="10">
    </EditText>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="20sp" >

	    <TextView
	        android:id="@+id/TextView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingBottom="10dip"
	        android:text="@string/prenom"
	        android:textColor="#3300CC"
	        android:textSize="30dp" />

	</LinearLayout>

	<EditText
	    android:id="@+id/Prenom"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:ems="10" >

	    <requestFocus />
	</EditText>
 	
</LinearLayout>